# libmatch

./: 1220.sh  CMakeLists.txt  LICENSE  README.md  action1683.txt  action207.txt  action461.txt  action605.txt  advanced_nolimit_camsin7.txt  black.txt  black_1.txt  blackbird_result_try1.txt  camsin7.txt  camsin7_1.txt  camsin7_20000000.txt  camsin_result_try1.txt  hash.cpp  hash.hpp  nolimit.txt  ping_test.txt  result_try.txt  result_try1.txt  run.sh  run_1214.sh  run_opt_1.sh  run_optimized.sh  run_optimized_1.sh  run_optimized_1202.sh  run_optimized_1207.sh  run_optimized_1208.sh  run_optimized_actions.sh  run_optimized_new.sh  run_optimized_noexpansion.sh  run_optimized_samesize_group.sh  run_optimized_tune_group.sh  run_optimized_tune_group_2.sh  samememory_group_run.sh  samememory_group_run_2.sh  test1.txt  test2.txt  (+1 more)
libmatch/: CMakeLists.txt  basic_trie.cpp  basic_trie.hpp  hash.cpp  hash.hpp  linear_arbitrary.cpp  linear_arbitrary.hpp  stride_trie.cpp  stride_trie.hpp  wildcard.cpp  wildcard.hpp
test/: CMakeLists.txt  action_generator.cpp  basic_trie.cpp  basic_trie_group.cpp  bitweaving.cpp  bw_noexpand_sort.cpp  generate_keys_num.cpp  group_advanced.cpp  group_noexpand_base.cpp  group_noexpand_merge.cpp  group_nolimit.cpp  group_search_reviewed.cpp  hash.cpp  linear_arbitrary.cpp  optimized_group_search_reviewed.cpp  ping_noexpand.cpp  random_10rules.cpp  random_vector.cpp  stride_trie.cpp  test.cpp  trie_input.txt  trie_with_merge.cpp  trie_with_merge1.cpp  trie_with_merge1_sort.cpp  trie_wo_priority.cpp  wildcard.cpp
test/Benchmarks/: action1911.txt  action2925.txt  action553.txt
